--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,7 +8,7 @@
 
 * {
   color: rgb(14, 122, 0);
-  font-family: 'Comic Neue', cursive;
+  font-family: 'Comic Neue', sans-serif;
 }
 
 h1 {
@@ -115,14 +115,28 @@ body {
 
 @media (max-width: 768px) {
   h1 {
+    font-size: 2.2rem;
+  }
+  
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  #image {
+    width: 250px;
+  }
+}
+
+@media ((min-width: 1000px) and (max-width: 1900px)) {
+  h1 {
     font-size: 2.5rem;
   }
   
   h3 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
 
   #image {
-    width: 300px;
+    width: 200px;
   }
 }
