--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -127,7 +127,7 @@ body {
   }
 }
 
-@media ((min-width: 1000px) and (max-width: 1900px)) {
+@media (min-width: 769px) and (max-width: 1600px) {
   h1 {
     font-size: 2.5rem;
   }
